# aws-sandbox

./: README.md  devbox.json
assets/: scheduled_data_summary_export_stack.excalidraw
hello-lambda/: README.md  package-lock.json
hello-lambda/lib/: hello-lambda-stack.ts
hello-lambda/lib/lambdas/hello-lambda/: Makefile
hello-lambda/test/: hello-lambda.test.ts
patterns/apigw-http-lambda-documentdb/: README.md  cdk.json  package-lock.json  package.json
patterns/apigw-http-lambda-documentdb/lambda/: app.ts
patterns/apigw-http-lambda-documentdb/lib/: apigw-http-lambda-documentdb-stack.ts
patterns/apigw-http-lambda-documentdb/test/: apigw-http-lambda-documentdb.test.ts
patterns/scheduled-data-summary-export/: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml
patterns/scheduled-data-summary-export/lambda/: requirements.txt
patterns/scheduled-data-summary-export/lambda/api-handler/: index.py  requirements.txt
patterns/scheduled-data-summary-export/lambda/summary-handler/: index.py
patterns/scheduled-data-summary-export/scheduled_data_summary_export/: scheduled_data_summary_export_stack.py
patterns/scheduled-data-summary-export/scheduled_data_summary_export/lambda/api/: index.py
patterns/scheduled-data-summary-export/tests/unit/: test_scheduled_data_summary_export_stack.py
tutorials/hello-lambda/: README.md  cdk.json  package.json
tutorials/hello-lambda/lib/: hello-lambda-stack.ts
tutorials/tofu-lambda/: .gitignore  README.md
tutorials/tofu-lambda/infra/: .terraform.lock.hcl  backend.tf  main.tf
(+5 files in other folders)
