[project]
name = "scheduled-data-summary-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.206.0",
    "boto3>=1.39.17",
    "constructs>=10.0.0,<11.0.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest==6.2.5",
]

[tool.setuptools]
packages = ["scheduled_data_summary_export", "lambda"]
